force-app/main/default/objects/SF_Certification__c/fields/Certification_Code__c.field-meta.xml
<CustomField>
    <fullName>Certification_Code__c</fullName>
    <description>Captures code associated with a given certification. Example: Salesforce Certified Platform Administrator certification&apos;s corresponding code is: Plat-Admn-201</description>
    <label>Certification Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>