force-app/main/default/objects/SF_Certification__c/fields/Number_of_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Prerequisites__c</fullName>
    <label>Number of Prerequisites</label>
    <summaryForeignKey>Exam_Prerequisite__c.Prerequisite_Certification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>