force-app/main/default/objects/SF_Certification__c/fields/Official_Trailmix__c.field-meta.xml
<CustomField>
    <fullName>Official_Trailmix__c</fullName>
    <description>Link to the applicable trailmix where &quot;Salesforce Trailhead&quot; is the author</description>
    <label>Official Trailmix URL</label>
    <type>Url</type>
</CustomField>