force-app/main/default/objects/SF_Certification__c/fields/Passing_Grade__c.field-meta.xml
<CustomField>
    <fullName>Passing_Grade__c</fullName>
    <description>Describes the passing grade to pass this certification</description>
    <label>Passing Grade</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>